Traefik/manifests/3a/whoami.yaml
# The test workload: whoami (echoes the request) behind the Service echo on port 1027.
apiVersion: apps/v1
kind: Deployment
metadata:
  name: echo
  namespace: traefik
spec:
  replicas: 1
  selector:
    matchLabels: { app: echo }
  template:
    metadata:
      labels: { app: echo }
    spec:
      containers:
        - name: whoami
          image: traefik/whoami:v1.11
          ports: [{ containerPort: 80 }]
---
apiVersion: v1
kind: Service
metadata:
  name: echo
  namespace: traefik
spec:
  selector: { app: echo }
  ports: [{ port: 1027, targetPort: 80 }]
